@@ -13,6 +13,7 @@ CHANGE: Core  | More improvements to client identification code [amc1]
 CHANGE: UI    | Provide both "per-torrent" and "across-torrents" speed menu options [amc1]
 CHANGE: UI    | Speed improvements for menu generation and changing file priority in "Files" view [amc1]
 CHANGE: Plug  | Plugins can now dynamically register language resource bundles [amc1]
+CHANGE: UI    | Allow minibars to stick to any screen border in multi monitor setups [The 8472]
 
 BUGFIX: Core  | Fixed bug when trying to add torrents with semi-colon characters in filename [amc1]
 
